BuildingSMARTLibrary/src/nl/tue/buildingsmart/express/population/Part21Parser.java
/* Generated By:JavaCC: Do not edit this line. Part21Parser.java */
package nl.tue.buildingsmart.express.population;

/******************************************************************************
 * Copyright (C) 2009-2015  BIMserver.org
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 * 
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *****************************************************************************/

import java.io.File;
import java.io.FileInputStream;
import java.util.HashMap;
import java.util.Iterator;
import java.util.Vector;

import nl.tue.buildingsmart.express.parser.ExpressSchemaParser;

import org.bimserver.plugins.schema.Attribute;
import org.bimserver.plugins.schema.EntityDefinition;
import org.bimserver.plugins.schema.ExplicitAttribute;
import org.bimserver.plugins.schema.InverseAttribute;
import org.bimserver.plugins.schema.SchemaDefinition;

//import owlGenerator;

@SuppressWarnings("all")
public class Part21Parser implements Part21ParserConstants {

	public Vector current_record = new Vector();
	public Object[] current_entity = new Object[2];

	private SchemaDefinition schema;
	private String schemaName;
	private File schemaFile;
	private ModelPopulation model;

	private HashMap<Integer, EntityInstance> instances;

	private FileInputStream inputStream;

	private boolean verbose;

	public void init() {
		this.instances = new HashMap<Integer, EntityInstance>();

		this.verbose = false;
		this.schemaName = new String("");
		if (this.schema == null) {
			ExpressSchemaParser schemaParser = new ExpressSchemaParser(schemaFile);
			schemaParser.parse();
			this.schema = schemaParser.getSchema();
			if (verbose)
				System.out.println("Loading Schema " + this.schema.getName() + " successful");
		}
	}

	public HashMap<Integer, EntityInstance> getInstances() {
		return instances;
	}

	public void setInstances(HashMap<Integer, EntityInstance> instances) {
		this.instances = instances;
	}

	public SchemaDefinition getSchema() {
		return schema;
	}

	public void setSchema(SchemaDefinition schema) {
		this.schema = schema;
	}

	public String getSchemaName() {
		return schemaName;
	}

	public void setSchemaName(String schemaName) {
		this.schemaName = schemaName;
	}

	public File getSchemaFile() {
		return schemaFile;
	}

	public void setSchemaFile(File schemaFile) {
		this.schemaFile = schemaFile;
	}

	public ModelPopulation getModel() {
		return model;
	}

	public void setModel(ModelPopulation model) {
		this.model = model;
	}

	/************************************************
	 * Grammar
	 ***********************************************/
	final public void exchange_file() throws ParseException {
		jj_consume_token(50);
		header_section();
		data_section();
		jj_consume_token(51);
	}

	final public void header_section() throws ParseException {
		jj_consume_token(52);
		header_entity();
		header_entity();
		header_entity();
		if (jj_2_1(3)) {
			header_entity_list();
		} else {
			;
		}
		jj_consume_token(53);
	}

	final public void header_entity_list() throws ParseException {
		header_entity();
		label_1: while (true) {
			if (jj_2_2(3)) {
				;
			} else {
				break label_1;
			}
			header_entity();
		}
	}

	final public void header_entity() throws ParseException {
		Token name = null;
		name = jj_consume_token(KEYWORD);
		jj_consume_token(LPAREN);
		if (jj_2_3(3)) {
			parameter_list();
		} else {
			;
		}
		if (name.image.indexOf("FILE_SCHEMA") > -1) {
			String schema_name = ((String[]) ((Vector) current_record.get(9)).get(0))[1];
			this.setSchemaName(schema_name);

		}
		jj_consume_token(RPAREN);
		jj_consume_token(SEMICOLON);
	}

	final public void parameter_list() throws ParseException {
		parameter();
		label_2: while (true) {
			if (jj_2_4(3)) {
				;
			} else {
				break label_2;
			}
			jj_consume_token(COMMA);
			parameter();
		}
	}

	final public void parameter() throws ParseException {
		if (jj_2_5(3)) {
			typed_parameter();
		} else if (jj_2_6(3)) {
			untyped_parameter();
		} else if (jj_2_7(3)) {
			omitted_parameter();
		} else {
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	final public void typed_parameter() throws ParseException {
		Token t = null;
		Object[] pair = new Object[2];
		Vector park_current = (Vector) current_record.clone();
		current_record.clear();
		t = jj_consume_token(KEYWORD);
		jj_consume_token(LPAREN);
		parameter();
		jj_consume_token(RPAREN);
		pair[0] = t.image;
		pair[1] = current_record.clone();
		// System.out.println("TP:"+t.image+"("+current_record.clone()+")");
		park_current.add(pair);
		current_record = (Vector) park_current.clone();
	}

	final public void untyped_parameter() throws ParseException {
		Token t = null;
		String[] pair = new String[2];
		if (jj_2_8(3)) {
			t = jj_consume_token(DOLLAR);
			if (t != null) {

				pair[0] = "DOLLAR";
				pair[1] = t.image;
				current_record.add(pair);
				if (verbose)
					System.out.print("DOLLAR" + t.image + ", ");
			}
		} else if (jj_2_9(3)) {
			t = jj_consume_token(INTEGER);
			if (t != null) {
				pair[0] = "INTEGER";
				pair[1] = t.image;
				current_record.add(pair);
				if (verbose)
					System.out.print("INTEGER" + t.image + ", ");
			}
		} else if (jj_2_10(3)) {
			t = jj_consume_token(REAL);
			if (t != null) {
				pair[0] = "REAL";
				pair[1] = t.image;
				current_record.add(pair);
				if (verbose)
					System.out.print("REAL" + t.image + ", ");
			}
		} else if (jj_2_11(3)) {
			t = jj_consume_token(STRING);
			if (t != null) {
				pair[0] = "STRING";
				pair[1] = t.image;
				current_record.add(pair);
				if (verbose)
					System.out.print("STRING" + t.image + ", ");
			}
		} else if (jj_2_12(3)) {
			t = jj_consume_token(ENTITY_INSTANCE_NAME);
			if (t != null) {
				pair[0] = "ENTITY_INSTANCE_NAME";
				pair[1] = t.image;
				current_record.add(pair);
				if (verbose)
					System.out.print("ENTITY_INSTANCE_NAME" + t.image + ", ");
			}
		} else if (jj_2_13(3)) {
			t = jj_consume_token(ENUMERATION);
			if (t != null) {
				pair[0] = "ENUMERATION";
				pair[1] = t.image;
				current_record.add(pair);
				if (verbose)
					System.out.print("ENUMERATION" + t.image + ", ");
			}
		} else if (jj_2_14(3)) {
			t = jj_consume_token(BINARY);
			if (t != null) {
				pair[0] = "BINARY";
				pair[1] = t.image;
				current_record.add(pair);
				if (verbose)
					System.out.print("BINARY" + t.image + ", ");
			}
		} else if (jj_2_15(3)) {
			list();
		} else {
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	final public void omitted_parameter() throws ParseException {
		Token t = null;
		String[] pair = new String[2];
		t = jj_consume_token(STAR);
		if (t != null) {
			pair[0] = "STAR";
			pair[1] = t.image;
			current_record.add(pair);
			if (verbose)
				System.out.print("STAR" + t.image + ", ");
		}
	}

	final public void list() throws ParseException {
		// park the Vector
		Vector park_current = (Vector) current_record.clone();
		current_record.clear();
		if (verbose)
			System.out.print("list, ");
		jj_consume_token(LPAREN);
		label_3: while (true) {
			if (jj_2_16(3)) {
				;
			} else {
				break label_3;
			}
			parameter();
			label_4: while (true) {
				if (jj_2_17(3)) {
					;
				} else {
					break label_4;
				}
				jj_consume_token(COMMA);
				parameter();
			}
		}
		jj_consume_token(RPAREN);
		park_current.add(current_record.clone());
		current_record = (Vector) park_current.clone();
	}

	final public void data_section() throws ParseException {
		jj_consume_token(54);
		entity_instance_list();
		jj_consume_token(53);
	}

	final public void entity_instance_list() throws ParseException {
		entity_instance();
		label_5: while (true) {
			if (jj_2_18(3)) {
				;
			} else {
				break label_5;
			}
			entity_instance();
		}
	}

	final public void entity_instance() throws ParseException {
		if (jj_2_19(3)) {
			if (verbose)
				System.out.print("entity_instance, ");
			simple_entity_instance();
		} else if (jj_2_20(3)) {
			complex_entity_instance();
		} else {
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	public void simple_entity_instance() throws ParseException {
		Token name = null;
		name = jj_consume_token(ENTITY_INSTANCE_NAME);
		jj_consume_token(EQ);
		if (jj_2_21(3)) {
			scope();
		} else {
			;
		}
		simple_record();
		jj_consume_token(SEMICOLON);
		// System.out.println("instance name "+name.image);
		Integer id = new Integer(name.image.substring(1, name.image.length()));
		EntityInstance ent = new EntityInstance(this.getModel(), id.intValue());
		EntityDefinition entDef = schema.getEntityBN((String) current_entity[0]);
		ent.setEntityDefinition(entDef);
		Iterator<Attribute> attribIter = entDef.getAttributes(true).iterator();
		int attribCount = entDef.getAttributes(true).size();
		int recordSize = current_record.size();
		Iterator recordIter = current_record.iterator();
		while (attribIter.hasNext()) {
			// System.out.println(attribIter.next().getName());
			Attribute attr = attribIter.next();
			if (!(attr instanceof InverseAttribute)) {
				AttributeInstance ai = new AttributeInstance();
				ai.setAttributeType((ExplicitAttribute) attr);
				Object tmp = recordIter.next();
				// System.out.println(tmp.getClass());
				// ai.setValue(tmp);

				if (tmp instanceof String[]) {
					// only get the value part
					String[] singleval = (String[]) tmp;
					ai.setValue(singleval[1]);
					ai.setP21Header(singleval[0]);
				} else if (tmp instanceof Vector) {
					Vector<String> tmpVec = new Vector<String>();
					Iterator vecIter = ((Vector) tmp).iterator();
					String header = "";
					while (vecIter.hasNext()) {
						Object value = vecIter.next();
						if (value instanceof String[]) {
							String[] stringVal = (String[]) value;
							if (!header.equals("") && !stringVal[0].equals(header))
								System.err.println("ERROR: " + stringVal[0] + " has different header than " + header);
							tmpVec.add(stringVal[1]);
							ai.setP21Header(stringVal[0]);
							header = stringVal[0];
						}
					}
					ai.setValue(tmpVec);
				}

				else if (tmp instanceof Object[]) {
					// an inlinde definition of some type
					Object[] inline = (Object[]) tmp;
					ai.setP21Header((String) inline[0]);
					if (inline[1] instanceof Vector) {
						Vector<String> tmpVec = new Vector<String>();
						Iterator vecIter = ((Vector) inline[1]).iterator();
						while (vecIter.hasNext()) {
							Object value = vecIter.next();
							if (value instanceof String[]) {
								tmpVec.add(((String[]) value)[1]);
							}
						}
						ai.setValue(tmpVec);
					}

				}

				ent.addAttribute(ai);
				/*
				 * if (ai.getAttributeType().getDomain() instanceof SimpleType){
				 * if (ai.getAttributeType().getDomain() instanceof StringType){
				 * if (!(tmp instanceof String[] ||
				 * !((String[])tmp)[0].equalsIgnoreCase("string")))
				 * System.err.println("error"); }
				 * 
				 * 
				 * }
				 */
			}
		}
		// ent.setId(name.image);
		instances.put(id, ent);
	}

	final public void complex_entity_instance() throws ParseException {
		Token t = null;
		jj_consume_token(ENTITY_INSTANCE_NAME);
		jj_consume_token(EQ);
		if (jj_2_22(3)) {
			scope();
		} else {
			;
		}
		subsuper_record();
		jj_consume_token(SEMICOLON);
		if (verbose)
			System.out.println("Complex:" + t);
	}

	final public void scope() throws ParseException {
		jj_consume_token(55);
		entity_instance_list();
		jj_consume_token(56);
		if (jj_2_23(3)) {
			export_list();
		} else {
			;
		}
	}

	final public void export_list() throws ParseException {
		jj_consume_token(SLASH);
		jj_consume_token(ENTITY_INSTANCE_NAME);
		label_6: while (true) {
			if (jj_2_24(3)) {
				;
			} else {
				break label_6;
			}
			jj_consume_token(COMMA);
			jj_consume_token(ENTITY_INSTANCE_NAME);
		}
		jj_consume_token(SLASH);
	}

	final public void simple_record() throws ParseException {
		Token record = null;
		current_entity = new Object[2];
		current_record = new Vector();
		record = jj_consume_token(KEYWORD);
		if (verbose)
			System.out.print("record: " + record.image + " ");
		jj_consume_token(LPAREN);
		if (jj_2_25(3)) {
			parameter_list();
		} else {
			;
		}
		jj_consume_token(RPAREN);
		if (verbose)
			System.out.println(" end record: " + current_record.size());

		current_entity[0] = record.image;
		current_entity[1] = current_record.clone();
	}

	final public void subsuper_record() throws ParseException {
		jj_consume_token(LPAREN);
		simple_record_list();
		jj_consume_token(RPAREN);
	}

	final public void simple_record_list() throws ParseException {
		simple_record();
		label_7: while (true) {
			if (jj_2_26(3)) {
				;
			} else {
				break label_7;
			}
			simple_record();
		}
		if (verbose)
			System.out.print("simple_record_list triggered");
	}

	final public void syntax() throws ParseException {
		exchange_file();
	}

	private boolean jj_2_1(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_1();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(0, xla);
		}
	}

	private boolean jj_2_2(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_2();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(1, xla);
		}
	}

	private boolean jj_2_3(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_3();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(2, xla);
		}
	}

	private boolean jj_2_4(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_4();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(3, xla);
		}
	}

	private boolean jj_2_5(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_5();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(4, xla);
		}
	}

	private boolean jj_2_6(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_6();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(5, xla);
		}
	}

	private boolean jj_2_7(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_7();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(6, xla);
		}
	}

	private boolean jj_2_8(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_8();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(7, xla);
		}
	}

	private boolean jj_2_9(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_9();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(8, xla);
		}
	}

	private boolean jj_2_10(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_10();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(9, xla);
		}
	}

	private boolean jj_2_11(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_11();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(10, xla);
		}
	}

	private boolean jj_2_12(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_12();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(11, xla);
		}
	}

	private boolean jj_2_13(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_13();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(12, xla);
		}
	}

	private boolean jj_2_14(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_14();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(13, xla);
		}
	}

	private boolean jj_2_15(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_15();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(14, xla);
		}
	}

	private boolean jj_2_16(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_16();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(15, xla);
		}
	}

	private boolean jj_2_17(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_17();
